--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "quiz",
-
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "server": "nodemon backend/server",
     "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "engines": {
     "node": "10.16.0"
@@ -17,10 +16,12 @@
   "dependencies": {
     "csv-parser": "^3.0.0",
     "csv-write-stream": "^2.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
     "mongoose": "^5.11.15",
-    "objects-to-csv": "^1.3.6"
+    "objects-to-csv": "^1.3.6",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
