--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,11 @@ frontend/node_modules
 /coverage
 
 # production
+frontend/build
 /build
-
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
