--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-file-reader": "^1.1.4",
     "react-icons": "^4.1.0",
     "react-responsive": "^8.2.0",
     "react-router": "^5.2.0",
